# douyin-academic-crawler

./: .gitignore  README.md  VERSION.md  main.py  pyproject.toml  release_manifest.json  requirements.txt
docs/: DEVELOPER_GUIDE.md  FIELD_DICTIONARY.md  OFFICIAL_API_CHECKLIST.md  USER_GUIDE.md
douyin_academic_crawler/: __init__.py  __main__.py  api.py  audit.py  cleaner.py  collector.py  config.py  cookie.py  gui.py  local_json_client.py  mock_client.py  models.py  official_api_client.py  parser.py  privacy.py  rate_limit.py  report.py  runtime.py  service.py  storage.py  task.py  task_runner.py
examples/: README.md  local_comment_tree_sample.json  local_json_config.json  mock_comment_tree.json  official_api_config.template.json  official_token.template.json  sample_config.json
scripts/: clean_outputs.ps1  run_acceptance.ps1  show_latest_outputs.ps1
tests/: test_api_adapter.py  test_cleaning_and_report.py  test_comment_collector.py  test_comment_tree_e2e.py  test_docs_and_scripts.py  test_gui_smoke.py  test_local_json_import.py  test_mock_run_cli.py  test_official_api_skeleton.py  test_official_api_templates.py  test_safety_guards.py  test_startup.py  test_task_runner.py
