[project]
name = "douyin-academic-crawler"
version = "0.1.0"
description = "Academic research tooling for collecting accessible public Douyin comment data."
requires-python = ">=3.10"

[project.optional-dependencies]
excel = ["openpyxl>=3.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
